# biothings_client.py

./: .travis.yml  CHANGES.txt  LICENSE.txt  README.md  README.rst  RELEASE.md  pyproject.toml  setup.py  tox.ini
.github/workflows/: build-package.yml  run-legacy-tests.yml  run-tests-py27.yml  run-tests-py36.yml  run-tests.yml
biothings_client/: __init__.py  __version__.py  _dependencies.py  base.py  settings.py
biothings_client/cache/: storage.py
biothings_client/cache/httpx/: transport.py
biothings_client/cache/storage/: sqlite3.py
biothings_client/client/: __init__.py  async.py  asynchronous.py  base.py  cache.py  definitions.py  exceptions.py  settings.py
biothings_client/docstring/: chem.py  gene.py  variant.py
biothings_client/mixins/: gene.py  variant.py
biothings_client/utils/: __init__.py  _external.py  cache.py  copy.py  curie.py  gene.py  iteration.py  join.py  jsonld_utils.py  score.py  variant.py
docs/: Makefile  conf.py  index.rst  make.bat  requirements.txt
docs/doc/: .Quick-Start.rst.swp  API.rst  Custom-API.rst  Quick-Start.rst  Subclassing.rst  api.rst  custom_api.rst  quickstart.rst  subclassing.rst
tests/: chem.py  conftest.py  gene.py  geneset.py  test.py  test_async.py  test_async_chem.py  test_async_client.py  test_async_gene.py  test_async_geneset.py  test_async_variant.py  test_caching.py  test_chem.py  test_gene.py  test_geneset.py  test_sync.py  test_variant.py  tornado_tests.py  utils.py  variant.py
tests/fixtures/: clients.py
