[build-system]
requires = ["setuptools>=67.4.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."] # list of folders that the contains the packages. We need it to be at root due to flat-layout
include = ["biothings_client*"]  # package names should match these glob patterns
exclude = ["tests*"]  # exclude packages matching these glob patterns
namespaces = false  # to disable scanning PEP 420 namespaces (true by default)

[project]
name="biothings_client"
authors = [
    {name = "Cyrus Afrasiabi"},
    {name = "Xinghua Zhou"},
    {name = "Everaldo Rodolpho", email="erodolpho@scripps.edu"},
    {name = "Johnathan Schaff", email = "jschaff@scripps.edu"},
    {name = "Dylan Welzel", email = "dwelzel@scripps.edu"},
    {name = "Chunlei Wu", email = "cwu@scripps.edu"},
]
requires-python = ">=3.7"
description = "Python Client for BioThings API services."
readme = "README.rst"
license = { text = "BSD-3-Clause" }
keywords = [
    "biology",
    "variant",
    "gene",
    "taxon",
    "taxonomy",
    "species",
    "drug",
    "chemical",
    "disease",
    "phenotype",
    "geneset",
    "annotation",
    "web",
    "service",
    "client",
    "api",
    "mygene.info",
    "myvariant.info",
    "mychem.info",
    "mydisease.info",
    "mygeneset.info",
    "mytaxon.info",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: BSD License",
    "Operating System :: POSIX",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Topic :: Utilities",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
    "httpx>=0.25.0; python_version>='3.8'",
    "httpx>=0.24.0; python_version=='3.7'",
    "importlib-metadata; python_version<='3.7'",
    "typing-extensions; python_version<='3.7'",
]
version = "0.5.0"

[project.optional-dependencies]

# caching is only available for Python 3.8 and above
caching = [
    "anysqlite; python_version>='3.8'",
    "hishel[httpx]==1.1.8; python_version=='3.9'",
    "hishel[httpx]>=1.1.9; python_version>'3.9'",
]
dataframe = ["pandas>=1.2.0"]   # the last version supports python 3.7
jsonld = ["PyLD>=0.7.2"]
tests = [
    "pytest>=8.3.3; python_version>='3.8'",
    "pytest>=7.4.4; python_version=='3.7'",
    "pytest-asyncio>=0.23.8; python_version>='3.8'",
    "pytest-asyncio>=0.21.2; python_version=='3.7'",
]


[project.urls]
homepage = "https://github.com/biothings/biothings_client.py"
repository = "https://github.com/biothings/biothings_client.py"
documentation = "https://biothings-clientpy.readthedocs.io"

[tool.setuptools]
zip-safe = true

[tool.black]
line-length = 120
target-version = ['py37', 'py38', 'py39', 'py310', 'py311', 'py312', 'py313', 'py314']

[tool.isort]
profile = "black"
combine_as_imports = true
line_length = 120
src_paths = ["."]

[tool.ruff]
line-length = 120

[tool.bandit]
exclude_dirs = ["tests", "docs"]

[tool.pyright]
exclude = ["tests", "build", "dist", ".git", ".pytest_cache", ".mypy_cache", "**/__pycache__", "**/node_modules", "**/.venv", "**/.env", "**/.*"]

# pytest configuration
[tool.pytest.ini_options]
minversion = "6.2.5"
asyncio_mode = "auto"
pythonpath = ["."]

# Path
norecursedirs = [
    ".svn",
    ".git",
    "_build",
    "tmp*",
    "lib",
    "lib64",
]
testpaths = ["tests"]

markers = [
    "unit",
]

# Uncomment these options for verbose output:
# addopts = [
#     "-rA",
#     "-vv",
#     "--doctest-modules",
#     "--setup-show",
#     "--capture=no",
#     "--tb=line",
#     "--durations=0",
#     "--showlocals",
#     "--strict-markers",
#     "--color=yes",
#     "--code-highlight=yes"
# ]

# Logging
# log_level = "DEBUG"
# log_cli = true
# log_cli_level = "DEBUG"
# log_cli_format = "%(asctime)s [%(levelname)] %(message)s"
# log_cli_date_format = "%Y-%m-%d %H:%M:%S"